--- a/smart2/WebContent/day05/test03.html
+++ b/smart2/WebContent/day05/test03.html
@@ -22,16 +22,18 @@
 						<label for="name">이름 : </label>
 					</div>
 					<div class="w3-col m9">
-						<input type="text" name="name" id="name" class="w3-col m10 w3-input w3-border">
+						<input type="text" name="name" id="name" class="w3-col m10 w3-input w3-border" 
+																placeholder="이름을 입력하세요!"required>
 					</div>
 				</div>
 				<!-- 아이디 -->			
 				<div class="w3-col mgb15">
 					<div class="w3-col m3 w3-right-align w3-text-gray pdr10 ft18 bd">
-						<label for="id">I D : </label>
+						<label for="id" >I D : </label>
 					</div>
 					<div class="w3-col m9">
-						<input type="text" name="id" id="id" class="w3-col m8 w3-input w3-border">
+						<input type="text" name="id" id="id" class="w3-col m8 w3-input w3-border"
+															placeholder="아이디를 입력하세요!"required>
 						<div class="w3-col m2 w3-blue w3-hover-aqua w3-button w3-round-large mgl10 wd15">check</div>
 					</div>
 				</div>
@@ -51,7 +53,8 @@
 						<label for="rePw">re P W : </label>
 					</div>
 					<div class="w3-col m9">
-						<input type="password" name="rePw" id="rePw" class="w3-col m10 w3-input w3-border">
+						<input type="password" name="rePw" id="rePw" class="w3-col m10 w3-input w3-border"
+																	placeholder="비밀번호를 입력하세요!"required>
 					</div>
 				</div>
 				<!-- 이메일 -->
@@ -60,7 +63,8 @@
 						<label for="eMail">eMail : </label>
 					</div>
 					<div class="w3-col m9">
-						<input type="password" name="eMail" id="eMail" class="w3-col m10 w3-input w3-border">
+						<input type="password" name="eMail" id="eMail" class="w3-col m10 w3-input w3-border"
+																	placeholder="이메일을 입력하세요!"required>
 					</div>
 				</div>
 				<!-- 전화번호 -->
@@ -69,7 +73,8 @@
 						<label for="Phone">Phone : </label>
 					</div>
 					<div class="w3-col m9">
-						<input type="password" name="Phone" id="Phone" class="w3-col m10 w3-input w3-border">
+						<input type="password" name="Phone" id="Phone" class="w3-col m10 w3-input w3-border"
+																	placeholder="전화번호를 입력하세요!"required>
 					</div>
 				</div>
 				<!-- 성별 -->				
@@ -79,47 +84,48 @@
 					</div>
 					<div class="w3-col m7 w3-center">
 						<div class="w3-half">
-							<input type="radio" name="gen" id="mgen" value="m" class="w3-col m4 w3-radio w3-right" checked="checked">
+							<!-- <input type="radio" name="gen" id="mgen" value="m" class="w3-col m4 w3-radio w3-right" checked="checked"> -->
+							<input type="radio" name="gen" id="mgen" value="M" class="w3-col m4 w3-radio w3-right" onchange="getGen(this)">
 							<label for="mgen" class="w3-col m6 w3-right ft14">남자</label>
 						</div>				
 						<div class="w3-half">
-							<input type="radio" name="gen" id="wgen" value="w" class="w3-col m4 w3-radio w3-right">
+							<input type="radio" name="gen" id="wgen" value="F" class="w3-col m4 w3-radio w3-right" onclick="getGen(this)">
 							<label for="wgen" class="w3-col m6 w3-right ft14">여자</label>
 						</div>	
 					</div>			
 				</div>
 				<!-- 아바타 -->				
-				<div class="w3-col">
+				<div class="w3-col" id="selAvt" style="display: none;">
 					<div class="w3-col m3 w3-right-align w3-text-gray pdr10 ft18 bd">
 						<label for="avata">Avatar : </label>
 					</div>
 					<div class="w3-col m8">
-					<div id="mCbxDiv">
+					<div id="mavt">
 						<div class="wd30 inlineBlock">
 							<label for="mAvata1" class="block ht100 mgl35"><img alt="mAvata1" class="wd30 block ht100 wd100" src="../img/mAbatar1.jpg"></label>
-							<input type="radio" name="avata" id="mAvata1" class="w3-col m4 mgl45"  value="M">
+							<input type="radio" name="avata" id="mAvata1" class="w3-col m4 mgl45"  value="M1">
 						</div>
 						<div class="wd30 inlineBlock">
 							<label for="mAvata2" class="block ht100 mgl35"><img alt="mAvata1" class="wd30 block ht100 wd100" src="../img/mAbatar2.jpg"></label>
-							<input type="radio" name="avata" id="mAvata2" class="w3-col m4 mgl45"  value="M">
+							<input type="radio" name="avata" id="mAvata2" class="w3-col m4 mgl45"  value="M2">
 						</div>
 						<div class="wd30 inlineBlock">
 							<label for="mAvata3" class="block ht100 mgl35"><img alt="mAvata1" class="wd30 block ht100 wd100" src="../img/mAbatar3.jpg"></label>
-							<input type="radio" name="avata" id="mAvata3" class="w3-col m4 mgl45"  value="M">
+							<input type="radio" name="avata" id="mAvata3" class="w3-col m4 mgl45"  value="M3">
 						</div>   
 					</div>
-					<div id="wCbxDiv">
+					<div id="favt">
 						<div class="wd30 inlineBlock">
 							<label for="wAvata1" class="block ht100 mgl35"><img alt="mAvata1" class="wd30 block ht100 wd100" src="../img/wAbatar1.jpg"></label>
-							<input type="radio" name="avata" id="wAvata1" class="w3-col m4 mgl45"  value="F">
+							<input type="radio" name="avata" id="wAvata1" class="w3-col m4 mgl45"  value="F1">
 						</div>
 						<div class="wd30 inlineBlock">
 							<label for="wAvata2" class="block ht100 mgl35"><img alt="mAvata1" class="wd30 block ht100 wd100" src="../img/wAbatar2.jpg"></label>
-							<input type="radio" name="avata" id="wAvata2" class="w3-col m4 mgl45"  value="F">
+							<input type="radio" name="avata" id="wAvata2" class="w3-col m4 mgl45"  value="F2">
 						</div>
 						<div class="wd30 inlineBlock">
 							<label for="wAvata3" class="block ht100 mgl35"><img alt="mAvata1" class="wd30 block ht100 wd100" src="../img/wAbatar3.jpg"></label>
-							<input type="radio" name="avata" id="wAvata3" class="w3-col m4 mgl45"  value="F">
+							<input type="radio" name="avata" id="wAvata3" class="w3-col m4 mgl45"  value="F3">
 						</div>   
 					</div>
 				</div>   
@@ -134,7 +140,7 @@
 		</div>
 	</div>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
 	function getGen(el){
 		var gval = el.value;
 		if(gval == 'M'){
@@ -142,13 +148,13 @@
 			document.getElementById('mavt').style.display = 'block';
 			document.getElementById('selAvt').style.display = 'block';
 		}
-		else if(gval == 'f'){
+		else if(gval == 'F'){
 			document.getElementById('favt').style.display = 'block';
 			document.getElementById('mavt').style.display = 'none';
 			document.getElementById('selAvt').style.display = 'block';
 		}
 	}
-</script> -->
+</script>
 
 
 
