--- a/smart2/WebContent/member/index.html
+++ b/smart2/WebContent/member/index.html
@@ -29,21 +29,25 @@
   <div class="w3-modal-content w3-animate-top w3-card-4">
     <header class="w3-container w3-teal">
       <span class="w3-button w3-display-topright" id="xbtn">&times;</span>
-      <h2>Modal Header</h2>
+      <h2>Smart Login</h2>
     </header>
     <div class="w3-container">
       <p>Some text..</p>
       <p>Some text..</p>
     </div>
-    <footer class="w3-container w3-teal">
+    <footer class="w3-container">
       <p>Modal Footer</p>
     </footer>
   </div>
 </div>
 
 <script type="text/javascript">
-	document.getElementById('xbtn').onclick = function(){
+	document.getElementById('lfbtn').onclick = function(){
 		document.getElementById('md01').style.display - 'block';
+	};
+	
+	document.getElementById('xbtn').onclick = function(){
+		document.getElementById('md01').style.display - 'none';
 	};
 </script>
 </body>
